--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,8 @@
 
 # Edit
 dotnet_diagnostic.IDE0301.severity = none
-
+dotnet_diagnostic.IDE0028.severity = none
+dotnet_diagnostic.IDE0305.severity = none
 
 dotnet_diagnostic.ASP0001.severity = none
 
