--- a/Gamestore.WebApi/wwwroot/assets/configuration/route-configuration.json
+++ b/Gamestore.WebApi/wwwroot/assets/configuration/route-configuration.json
@@ -1,6 +1,6 @@
 {
   "Game": "/game",
-  "UpdateGame": "/update-game",
+  "UpdateGame": "update-game",
   "DeleteGame": "/delete-game",
   "AddGame": "add-game",
   "Games": "/games",
