--- a/Gamestore.WebApi/wwwroot/assets/configuration/configuration.json
+++ b/Gamestore.WebApi/wwwroot/assets/configuration/configuration.json
@@ -8,29 +8,29 @@
   "gamesByPublisherApiUrl": "publishers/{companyname}/games",
   "gamesByPlatformApiUrl": "platforms/{id}/games",
   "getGameFile": "games/{key}/file",
-  "updateGameApiUrl": "games/update-game/{key}",
+  "updateGameApiUrl": "games/update-game",
   "addGameApiUrl": "games/add-game",
   "deleteGameApiUrl": "games/{key}",
 
   "genreApiUrl": "genres/{id}",
   "genresApiUrl": "genres",
-  "genresByGameApiUrl": "games/{key}",
-  "genresByParentApiUrl": "genres/{id}/genres",
-  "updateGenreApiUrl": "genres/{id}",
+  "genresByGameApiUrl": "genres/{key}/genres",
+  "genresByParentApiUrl": "genres/{id}/subgenres",
+  "updateGenreApiUrl": "genres/update-genre",
   "addGenreApiUrl": "genres/add-genre",
   "deleteGenreApiUrl": "genres/{id}",
 
   "platformApiUrl": "platforms/{id}",
   "platformsApiUrl": "platforms",
-  "platformsByGameApiUrl": "games/{key}",
-  "updatePlatformApiUrl": "platforms/add-platform",
+  "platformsByGameApiUrl": "platforms/{key}/platforms",
+  "updatePlatformApiUrl": "platforms/update-platform",
   "addPlatformApiUrl": "platforms/add-platform",
   "deletePlatformApiUrl": "platforms/{id}",
 
-  "publisherApiUrl": "publishers/{companyname}",
+  "publisherApiUrl": "publishers/name/{companyname}",
   "publishersApiUrl": "publishers",
-  "publisherByGameApiUrl": "games/{key}",
-  "addPublisherApiUrl": "publishers",
+  "publisherByGameApiUrl": "publishers/game/{key}",
+  "addPublisherApiUrl": "publishers/add-publisher",
   "deletePublisherApiUrl": "publishers/{id}",
   "updatePublisherApiUrl": "publishers",
 
